# ScoutHire

./: LICENSE  README.md
client/: README.md  package-lock.json  package.json
client/app/: globals.css  layout.tsx  page.tsx
client/app/context/: AppContext.tsx
client/components/: JobCard.tsx  LiveTrace.tsx  ProfileForm.tsx  ReportView.tsx  SearchForm.tsx  SidebarNav.tsx
client/lib/: utils.ts
client/types/: index.ts
server/: README.md  pyproject.toml
server/app/: main.py
server/app/api/: endpoints.py
server/app/model/: schemas.py
server/scouthire_mas/: 1_job_scraper.py  crew.py
server/scouthire_mas/agents/: a_job_scraper.py  b_candidate_matcher.py  c_aggregator.py
server/scouthire_mas/tools/: scrape_jobs_tool.py
